# tmis

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0000_base_identity.py  0001_document_record.py  0002_case_profile.py  0003_research_history.py  0004_reasoning_session.py  0005_document_draft.py  0006_workspace.py  0007_knowledge_object.py  0008_drafting_documents_firm_id.py  0009_drafting_document_versions.py  0010_research_history_firm_id.py  0011_research_searches.py  0012_case_profiles_firm_id.py  0013_document_records_firm_id.py
backend/scripts/: audit_platform_usage.py  demo_ai_governance.py  demo_cabinet_knowledge.py  demo_integration_hub.py  demo_legal_knowledge_graph.py  demo_strategic_intelligence.py  demo_workflow_automation.py  seed_beta_pilot.py
backend/src/tmis/: main.py
backend/src/tmis/agents/: __init__.py  analysis_agent.py  bootstrap.py  citations.py  collaboration_agent.py  contract_agent.py  contracts.py  drafting_agent.py  jurisprudence_agent.py  orchestrator.py  research_agent.py  strategy_agent.py  synthesis_agent.py  verifier_agent.py  watch_agent.py
backend/src/tmis/ai/: __init__.py
backend/tests/: conftest.py
backend/tests/contracts/: test_agent_input_contract.py  test_citation_contract.py  test_copilot_manage_permission_contract.py  test_knowledge_relation_contract.py
backend/tests/e2e/: test_placeholder.py
backend/tests/integration/: conftest.py  test_case_persistence.py  test_migration_chain_foundations_present.py  test_schema_parity.py
backend/tests/security/: conftest.py  test_case_intelligence_isolation.py  test_document_intelligence_isolation.py  test_drafting_isolation.py  test_login.py  test_rbac.py  test_research_isolation.py  test_tenant_isolation.py  test_token_validation.py  test_unauthenticated_access.py
backend/tests/unit/: test_case_application.py  test_health.py  test_identity_domain.py  test_orchestrator.py
(+2378 files in other folders)
