[project]
name = "tmis"
version = "0.1.0"
description = "TMIS - Themis Intelligence System - AI Legal Operating System"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
dependencies = [
    "fastapi>=0.115,<0.116",
    "python-multipart>=0.0.12,<0.1",
    "uvicorn[standard]>=0.32,<0.33",
    "pydantic>=2.9,<3.0",
    "pydantic-settings>=2.5,<3.0",
    "sqlalchemy>=2.0,<2.1",
    "alembic>=1.13,<1.14",
    "psycopg[binary]>=3.2,<4.0",
    "asyncpg>=0.29,<0.30",
    "redis>=5.1,<6.0",
    "celery>=5.4,<6.0",
    "python-jose[cryptography]>=3.3,<4.0",
    "cryptography>=42,<51",
    "passlib[bcrypt]>=1.7,<2.0",
    "structlog>=24.4,<25.0",
    "httpx>=0.27,<0.28",
    "langgraph>=0.2,<0.3",
    "pypdf>=5.0,<6.0",
    "python-docx>=1.1,<2.0",
    "PyYAML>=6.0,<7.0",
    "Pillow>=10.4,<11.0",
    "qdrant-client>=1.10,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<0.25",
    "pytest-cov>=5.0,<6.0",
    "mypy>=1.11,<2.0",
    "ruff>=0.6,<0.7",
    "types-python-jose>=3.3,<4.0",
    "types-passlib>=1.7,<2.0",
    "types-PyYAML>=6.0,<7.0",
    "aiosqlite>=0.20,<0.21",
    "sentence-transformers>=3.0,<6.0",
]
rag-local = [
    "sentence-transformers>=3.0,<6.0",
]
ci = [
    "bandit>=1.7,<2.0",
    "pip-audit>=2.7,<3.0",
    "pdoc>=15.0,<16.0",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = "celery.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]  # FastAPI's `Depends(...)` default-argument pattern is idiomatic.
